# dune-weaver

./: .cursorrules  .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PATTERN_CREDITS.md  README.md  TAILWIND_SETUP.md  app.py  check_docker_network.sh  docker-compose.yml  dune-weaver.service  dw  file.ino  flash-fluidnc.sh  led_controller.py  main.py  mirror_pattern.py  nginx.conf  package-lock.json  package.json  playlists.json  pyproject.toml  requirements-dev.txt  requirements-nonrpi.txt  requirements.txt  setup-pi.sh  setup-tailwind.sh  setup_hyperion.sh  shutdown_host.sh  start.sh  state.json  tailwind.config.js  test_hyperion_effects.py  test_led_effects.py  (+4 more)
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
arduino_code/: arduino_code.ino
arduino_code_TMC2209/: arduino_code_TMC2209.ino
docs/: PER_PATTERN_LED_EFFECTS.md
dune-weaver-flask/: app.py  requirements.txt
dune-weaver-touch/: .env.example  .gitattributes  .gitignore  FIRMWARE_MIGRATION.md  RASPBERRY_PI_SETUP.md  README.md  backend.py  check-display.sh  check-packages.sh  configure-boot.sh  diagnose-boot.sh  diagnose.sh  discovery.py  dune-weaver-touch.desktop  dune-weaver-touch.service  firmware_client.py  install-service.sh  install.sh  main.py  png_cache_manager.py  requirements.txt  run.sh  setup-autologin.sh  setup-autostart.sh  setup_kiosk.sh  start-with-fb-check.sh  test-egl.sh  test_egl_info.py  test_minimal.qml  test_qt_minimal.py  thr_preview.py  update-service.sh
dune_weaver_flask/: app.py
esp32/: esp32.ino
(+1284 files in other folders)
